kubernetes/argocd/resources/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argocd
  namespace: argocd
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: argocd.dominiksiejak.pl
      tls:
        mode: Terminate
        certificateRefs:
          - name: dominiksiejak-pl-tls
            namespace: cilium
      allowedRoutes:
        namespaces:
          from: Same
