kubernetes/argocd/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: cilium
      namespace: cilium
      sectionName: https-argocd
  hostnames:
    - argocd.dominiksiejak.pl
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
